--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ a:hover {
     <div class="description">
       <p class="irony">Моя работа состоит в том чтобы играть в консоли, набирать текст в редакторе и сидеть в браузере, подробнее о талантах <a href="https://linkedin.com/in/byzov" target="_blank">здесь</a>.</p>
       <p class="hr">~</p>
-      <p class="irony">Когда появляется свободное время, трачу его на доработку этой странички. Держать руку на пульсе и следить за моим свободным времем можно <a href="https://github.com/byzov/resume/commits/master" target="_blank">тут</a>. Если там много активности, то это может означать только одно &mdash; я ищу работу.</p>
+      <p class="irony">Когда появляется свободное время, трачу его на доработку этой странички. Держать руку на пульсе и следить за моим свободным времем можно <a href="https://github.com/byzov/byzov.github.io/pulse" target="_blank">тут</a>. Если там много активности, то это может означать только одно &mdash; я ищу работу.</p>
       <p class="hr">~</p>
       <div class="feedback">
       Открыт к общению :)
