Добавлена ссылка на твитер. Добавлен код для аналитики.

--- a/index.html
+++ b/index.html
@@ -114,6 +114,21 @@ a:hover {
   font-weight: bold;
 }
 </style>
+
+<script type="text/javascript">
+
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-25555004-1']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+
+</script>
+
 </head>
 <body>
   <section class="wrap">
@@ -129,8 +144,9 @@ a:hover {
       <p class="irony">Когда появляется свободное время, трачу его на доработку этой странички. Держать руку на пульсе и следить за моим свободным времем можно <a href="https://github.com/byzov/byzov.github.io/pulse" target="_blank">тут</a>. Если там много активности, то это может означать только одно &mdash; я ищу работу.</p>
       <p class="hr">~</p>
       <div class="feedback">
-      Открыт к общению :)
+        Открыт к общению :)
         <div><a href="mailto:pavel@byzov.com">pavel@byzov.com</a></div>
+        <div><a href="https://twitter.com/PavelByzov" target="_blank">@PavelByzov</a></div>
       </div>
     </div>
   </section>
