--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ _gaq.push(['_trackPageview']);
       <p class="irony">Когда появляется свободное время, трачу его на доработку этой странички. Держать руку на пульсе и следить за моим свободным времем можно <a href="https://github.com/byzov/byzov.github.io/pulse" target="_blank">тут</a>. Если там много активности, то это может означать только одно &mdash; я ищу работу.</p>
       <p class="hr">~</p>
       <div class="feedback">
-        Открыт к общению :)
+        Открыт для общения :)
         <div><a href="mailto:pavel@byzov.com">pavel@byzov.com</a></div>
         <div><a href="https://twitter.com/PavelByzov" target="_blank">@PavelByzov</a></div>
       </div>
