--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ a:hover {
 .console {
   font-size: 300%;
   margin: 70px auto;
-  width: 200px;
+  width: 100%;
   text-align: center;
   font-weight: bold;
   text-shadow: 6px 6px 0px rgba(0,0,0,0.3);
@@ -117,18 +117,15 @@ a:hover {
 and (min-device-width : 320px) 
 and (max-device-width : 667px) {
     body {
-        font-size: 54px;
+        font-size: 80px;
     }
     .title {
-        font-size: 250%;
+        font-size: 150%;
     }
     .wrap {
         max-width: 900px;
         min-width:700px;
         margin: 300px auto;
-    }
-    .console {
-        width: 400px;
     }
 }
 
@@ -141,9 +138,6 @@ and (-webkit-min-device-pixel-ratio: 1)  {
     }
     .wrap {
         min-width:700px;
-    }
-    .console {
-        width: 400px;
     }
 }
 </style>
