Добавлена meta информация

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ Released under the MIT license: http://jsbin.mit-license.org
 <html>
 <head>
   <meta charset="utf-8">
+  <meta property="og:image" content="/cover.png"/>
+  <meta property="og:title" content="Страница web-разработчика"/>
+  <meta property="og:description" content="Моя работа состоит в том чтобы играть в консоли, набирать текст в редакторе и сидеть в браузере."/>
+  <meta property="og:locale" content="ru_RU"/>
   <title>fullstack web-разработчик</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <style id="jsbin-css">
