--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Released under the MIT license: http://jsbin.mit-license.org
 <html>
 <head>
   <meta charset="utf-8">
-  <meta property="og:image" content="/cover.png"/>
+  <meta property="og:image" content="http://www.byzov.com/cover.png"/>
   <meta property="og:title" content="Страница web-разработчика"/>
   <meta property="og:description" content="Моя работа состоит в том чтобы играть в консоли, набирать текст в редакторе и сидеть в браузере."/>
   <meta property="og:locale" content="ru_RU"/>
